--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -1,4 +1,16 @@
 .searchBar {
   width: 20rem;
   height: 2rem;
+  border-radius: 2rem;
+  text-indent: 1rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hidden {
+  visibility: hidden;
 }
