--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,13 +1,6 @@
 .app {
   text-align: center;
-}
-
-
-.appHeader {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
