--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -12,5 +12,11 @@
 }
 
 .hidden {
-  visibility: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
