--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,10 +1,24 @@
 .header {
+  position: relative;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  gap: 4rem;
-  background-color: #F5F5F5;
+  gap: 4rem; 
   width: 100%;
   height: 5rem;
   font-weight: bold;
+}
+
+.header:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  height: 5rem;
+  width: 100vw;
+  transform: translateX(-50%);
+  z-index: -1;
+  box-sizing: border-box;
+  background-color: #F5F5F5;
 }
