--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -3,14 +3,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 4rem; 
+  gap: 4rem;
   width: 100%;
   height: 5rem;
   font-weight: bold;
 }
 
 .header:after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   left: 50%;
@@ -20,5 +20,5 @@
   transform: translateX(-50%);
   z-index: -1;
   box-sizing: border-box;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
