--- a/frontend/src/components/Header/ProfileSelector/ProfileSelector.module.css
+++ b/frontend/src/components/Header/ProfileSelector/ProfileSelector.module.css
@@ -1,14 +1,14 @@
 .profile {
   display: flex;
-  align-items: center;
+  text-align: left;
   border: none;
   gap: 0.25rem;
 }
 
 .profile:before {
   content: '';
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   background-color: rebeccapurple;
   border-radius: 50%;
   display: inline-block;
