--- a/frontend/src/components/SearchResults/ResultCard/ResultCard.module.css
+++ b/frontend/src/components/SearchResults/ResultCard/ResultCard.module.css
@@ -1,4 +1,3 @@
-
 .resultCard {
   display: flex;
   gap: 2rem;
@@ -39,22 +38,21 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  color: #612EE2;
+  color: #612ee2;
 }
 
 .downloadIcon path {
-  stroke:#612EE2;
-  fill: #612EE2;
+  stroke: #612ee2;
+  fill: #612ee2;
 }
 
 .educationalLevels {
   display: flex;
   align-items: center;
-
 }
 
 .educationalLevel {
   padding: 0.5rem 1rem;
-  background-color:#F2F2F2;
+  background-color: #f2f2f2;
   border-radius: 2.75rem;
 }
