--- a/frontend/src/components/ResultPage/ResultPage.module.css
+++ b/frontend/src/components/ResultPage/ResultPage.module.css
@@ -20,4 +20,22 @@
 
 .iframe {
   width: 100%;
+  height: 600px;
+}
+
+.linkInput {
+  width: 25rem;
+  height: 2rem;
+  margin: 0 2rem;
+  text-indent: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.linkButton {
+  border-radius: 2rem;
+  background-color: #DED7F0;
+  color: #44209E;
+  font-weight: bold;
+  border: none;
+  padding: 0.5rem 1rem;
 }
