Add learning mode to header

--- a/frontend/src/components/LearningModeSelector/LearningModeSelector.module.css
+++ b/frontend/src/components/LearningModeSelector/LearningModeSelector.module.css
@@ -1,5 +1,10 @@
-.modeWrapper {
-  margin-bottom: 20px;
+.selectedModeWrapper {
+  display: flex;
+  align-items: middle;
+}
+
+.selectedModeWrapper img {
+  height: 15px;
 }
 
 .mode {
