--- a/frontend/src/components/common/LoadingSpinner/LoadingSpinner.module.css
+++ b/frontend/src/components/common/LoadingSpinner/LoadingSpinner.module.css
@@ -1,7 +1,7 @@
 .loading {
   border: 1rem solid #f3f3f3;
   border-radius: 50%;
-  border-top: 1rem solid #612EE2;
+  border-top: 1rem solid #612ee2;
   width: 8rem;
   height: 8rem;
   -webkit-animation: spin 2s linear infinite;
@@ -10,11 +10,19 @@
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
