--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .header {
-  position: relative;
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -7,6 +8,7 @@
   width: 100%;
   height: 5rem;
   font-weight: bold;
+  background-color: white;
 }
 
 .header:after {
