--- a/frontend/src/components/SearchResults/ResultCard/ResultCard.module.css
+++ b/frontend/src/components/SearchResults/ResultCard/ResultCard.module.css
@@ -16,6 +16,12 @@
 
 .description {
   font-size: 1.125rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  white-space: normal;
 }
 
 .link {
