--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,3 +1,9 @@
+.headerWrapper {
+  position: sticky;
+  width: 100%;
+  top: 0;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -7,6 +13,14 @@
   height: 5rem;
   font-weight: bold;
   background-color: white;
+  position: sticky;
+  top: 0;
+  max-width: 1124px;
+  margin: 0 auto;
+}
+
+.shadow {
+  box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 }
 
 .header:after {
