--- a/frontend/src/components/common/FilterElement/FilterElement.module.css
+++ b/frontend/src/components/common/FilterElement/FilterElement.module.css
@@ -1,5 +1,5 @@
 .filterElement {
-  padding: 0.5rem 1rem;
+  padding: 0.25rem 0.8rem;
   background-color: #DED7F0;
   border-radius: 2.75rem;
   display: flex;
@@ -15,4 +15,6 @@
   background: none;
   border: none;
   cursor: pointer;
+  padding: 0;
+  height: 24px;
 }
