--- a/frontend/src/components/ResultPage/ResultPage.module.css
+++ b/frontend/src/components/ResultPage/ResultPage.module.css
@@ -1,4 +1,5 @@
 .titleRow {
+  margin-top: 33px;
   display: flex;
   justify-content: space-between;
 }
@@ -55,12 +56,27 @@
   padding-bottom: 4rem;
 }
 
-.sectionRow {
+.sectionRowWrapper {
   margin: 2rem 0;
   display: flex;
   gap: 3rem;
   background-color: white;
+  position: fixed;
+  top: 80px;
+  left: 0px;
+  width: 100vw;
+  margin: 0 auto;
 }
+
+.sectionRow {
+  max-width: 1024;
+  margin: 0 auto;
+}
+
+.shadow {
+  box-shadow: -10px 12px 10px -13px rgba(57, 63, 72, 0.3);
+}
+
 
 .sectionRow button {
   background: none;
