--- a/frontend/src/components/SearchBar/SearchBar.module.css
+++ b/frontend/src/components/SearchBar/SearchBar.module.css
@@ -3,7 +3,7 @@
   height: 2.5rem;
   border-radius: 2rem;
   text-indent: 1rem;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
 }
 
